@@ -1,3 +1,8 @@
+2012-12-10  Pedro Alves  <palves@redhat.com>
+
+	* solib-svr4.c (svr4_solib_create_inferior_hook) [_SCO_DS]: Remove
+	dead SCO code, and adjust function description comment.
+
 2012-12-09  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* configure.ac (CC_HAS_LONG_LONG): Replace by AC_MSG_ERROR.
